# trollbot

./: AUTHORS  BUGS  COPYING  ChangeLog  HACKERS  INSTALL  LICENSE  LIMITATIONS  Makefile.am  Makefile.in  NEWS  README  SCRIPTING  TODO  acinclude.m4  aclocal.m4  autogen.sh  config.h  config.h.in  config.nice  configure  configure.ac  configure.in  confstuff  defaults.conf  make  myconf.sh  perl.m4  php.m4  tcl.m4  trollbot.conf  userdb
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
conf_dist/: Makefile.am  Makefile.in  defaults.conf  trollbot.conf.dist
db/: chandb.severed  userdb.DALnet  userdb.severed
db_dist/: Makefile.am  Makefile.in  README  chandb.defaults  userdb.DALnet  userdb.local
doc/: Makefile.in  SCRIPTING.PHP
doc_dist/: Makefile.am  Makefile.in  SCRIPTING.PYTHON  SCRIPTING.TCL  javascript.txt
lib_dist/: tb_py_core.py
libltdl/: Makefile.in  aclocal.m4  configure
log_dist/: Makefile.am  Makefile.in  README
m4/: perl.m4  pgsql.m4  php.m4  python.m4  tcl.m4
modules_dist/: Makefile.am  Makefile.in  README
scripts/: Makefile.am  Makefile.in  cryptoquote-1.02.tcl  cryptoquote.php  test.php  test.tcl
scripts_dist/: Makefile.am  Makefile.in  bmi.php  cryptoquote-1.02.tcl  cryptoquote.php  ics_test.tcl  irc_ics.tcl  manual.php  python.py  test.js  test.php  test.py  test.tcl
src/: Makefile.am  Makefile.in  apachecompat.c  apachecompat.h  aprcompat.c  aprcompat.h  ban.c  ban.h  channel.c  channel.h  channels.c  channels.h  config_engine.c  config_engine.h  dcc.c  dcc.h  debug.c  debug.h  default_handlers.c  default_triggers.c  default_triggers.h  die.c  egg_lib.c  egg_lib.h  egg_match.c  egglib.c  handlers.c  handlers.h  http_proto.c  http_proto.h  http_request.c  http_request.h  http_server.c  http_server.h  httpd_request.c  httpd_request.h  httpd_server.c  httpd_server.h  ics-proto.c  ics-proto.h  (+97 more)
src/common/: config_engine.c  config_engine.h  die.c  die.h  egg_lib.c  egg_match.c  egg_match.h  log_filter.c  main.h  server.h  sockets.h  t_crypto_module.h  tconfig.c  tconfig.h  trigger.c  trigger.h  util.c
src/ics/: ics_proto.h  ics_server.c  ics_server.h
src/irc/: channel.c  default_triggers.c  irc.h  user.h
src/irc/js/: js_lib.h
src/irc/perl/: perl_embed.c  perl_lib.c
src/irc/php/: php_embed.c  php_lib.c  php_lib.h
src/irc/python/: python_embed.c  python_lib.c  python_lib.h
src/irc/tcl/: tcl_embed.c  tcl_embed.h
src/modules/: Makefile.am  Makefile.in
src/modules/crypto/: Makefile.am  Makefile.in  crypto.c  tomcrypt_cfg.h  tomcrypt_macros.h  util.c
src/modules/http/: http_proto.c  http_request.c  http_request.h  http_server.c  http_server.h
src/modules/ics/: Makefile.am  Makefile.in  debug.c  debug.h  ics_game.c  ics_game.h  ics_lib.c  ics_lib.h  ics_proto.c  ics_proto.h  ics_server.c  ics_server.h  ics_trigger.c  ics_trigger.h  tmod_ics.c  tmod_ics.h  util.c  util.h
src/modules/pgsql_log_filter/: Makefile.am  Makefile.in  pgsql_log_filter.c  pgsql_log_filter.h
src/modules/pgsql_log_filter/.deps/: blowfish.Plo  crypto.Plo  sha512.Plo  util.Plo
src/modules/tmod_ics/: Makefile.am  Makefile.in  ics_game.c  ics_game.h  ics_lib.c  ics_lib.h  ics_proto.c  ics_proto.h  ics_server.c  ics_server.h  ics_trigger.c  ics_trigger.h  tmod_ics.c  tmod_ics.h
src/modules/xmpp/: xmpp_proto.c  xmpp_proto.h  xmpp_server.c  xmpp_server.h  xmpp_trigger.h
src/xmpp/: xmpp_trigger.c
text/: cryptoscores.txt  question_answer_guess.txt  question_answer_maybe.txt  question_answer_sure.txt
text_dist/: Makefile  Makefile.am  Makefile.in  cryptoscores.txt  dcc.motd.dist  (+1 more)
trollbot/: AUTHORS  COPYING  ChangeLog  DESIGN  DESIGN.save  LICENSE  LIMITATIONS  Makefile.am  Makefile.in  README  SCRIPTING  TODO  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  tcl.m4  think  trollbot.conf  trollbot.conf.dist
trollbot/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
trollbot/conf_dist/: Makefile.am  Makefile.in  defaults.conf
trollbot/db_dist/: Makefile.am  Makefile.in  README
trollbot/doc/: PHP
trollbot/doc_dist/: GPL  Makefile.am  Makefile.in  SCRIPTING.PHP  flow
trollbot/libltdl/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
trollbot/m4/: perl.m4  php.m4
trollbot/scripts_dist/: Makefile.am  Makefile.in  cryptoquote.php  test.php
trollbot/src/: Makefile.am  Makefile.in  channels.c  dcc.c  dcc.h  default_handlers.c  die.c  irc.c  irc.h  loop.c  loop.h  main.h  scripts.c  scripts.h  sendq.c  sha1.c  sockets.c  tconfig.c  tconfig.h  tmodule.c  tmodule.h  triggers.c  triggers.h  trollbot.c  users.h  util.c  util.h
trollbot/src/modules/: Makefile.am  Makefile.in
trollbot/src/modules/foo/: Makefile.am  Makefile.in  foo.c  util.c  util.h
trollbot/src/modules/irc/: Makefile.am  Makefile.in  channel.c  channel.h  connections.c  debug.c  default_triggers.c  default_triggers.h  egg_lib.c  irc.c  module.c  network.c  network.h  old-irc.c  server.c  sockets.c  tconfig.c  tconfig.h  tirc.c  tirc.h  trigger.c  trigger.h  user.c  user.h
trollbot/src/modules/irc/crypto/: Makefile  Makefile.am  Makefile.in  crypto_la-sha224.loT  sha224.c  sha224.loT  sha384.loT  tcrypto.c  tcrypto.h
trollbot/src/modules/irc/crypto/.deps/: crypto_la-md2.Plo  crypto_la-md5.Plo  crypto_la-sha224.Tpo  crypto_la-sha512.Plo  crypto_la-tcrypto.Plo  md2.Plo  md5.Plo  sha224.Tpo  sha384.Tpo  sha512.Plo
trollbot/src/modules/irc/dcc/: Makefile.am  dcc.c
trollbot/src/modules/irc/scripting/: Makefile.am
trollbot/src/modules/irc/scripting/perl_script/: Makefile.am  perl_embed.c  perl_embed.h  perl_lib.h
trollbot/src/modules/irc/scripting/php_script/: Makefile.am  apachecompat.c  php_embed.c  php_embed.h  php_lib.c
trollbot/src/modules/irc/scripting/python_script/: Makefile.am  python_embed.c  python_lib.c
trollbot/src/modules/irc/scripting/tcl_script/: Makefile.am  tcl_embed.h  tcl_lib.c  tcl_lib.h
trollbot/src/modules/www/: util.h
trollbot/text/: quotes.txt
trollbot/text_dist/: Makefile.am  Makefile.in  cryptoscores.txt
(+7 files in other folders)
