VERSION = "0.0.1"

AC_INIT(src/main.c)
AM_INIT_AUTOMAKE(trollbot,0.0.1)

AC_CONFIG_HEADER(config.h)

AC_PROG_CC

dnl test C Compiler
AC_LANG_C

AC_PROG_TCL
AC_PROG_PHP

AC_C_BIGENDIAN

AC_PROG_MAKE_SET

AC_HEADER_STDC

AC_SUBST(VERSION)

AC_OUTPUT(Makefile 
          src/Makefile)

echo "Trollbot is now configured with the following options"

if test "x${WITH_TCL}" = "x"; then
    echo "TCL Support: NO"
else
    echo "TCL Support: YES"
fi

if test "x${WITH_PHP}" = "x"; then
    echo "PHP Support: NO"
else
    echo "PHP Support: YES"
fi

